crates/vm/src/snapshots/mu_vm__tests__simple-2.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
2 - 2

# Result (success):
0

# Stdout:

