crates/vm/src/snapshots/mu_vm__tests__simple-6.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
2 % 2

# Func:
function <[[main]]>:
  frame_size: 5
  length: 15
  const: <empty>
  code:
     0 | push_small_int value=2
     5 | store_reg r4
     7 | push_small_int value=2
    12 | rem r4
    14 | suspend 


# Result (success):
0

# Stdout:

